# datasense

./: .gitignore  Cargo.toml  README.md  analysis.docx  analysis.md  my_trainer.py  report.json  requirements.txt
datasense-cli/: Cargo.toml
datasense-cli/src/: main.rs
python/: debug_img.py  fix_test_imgs.py
python/datasense/: main.py
python/datasense/engine/: explain.py  exporter.py  fingerprint.py  generators.py  plots.py  recommendations.py  scoring.py  tui.py
python/datasense/fingerprinters/: audio.py  image.py  mixed.py  tabular.py  text.py  video.py
samples/: video_analysis.docx  video_analysis.md  video_analysis.txt
test_dataset/tabular/: asl_data.csv
test_dataset/text/: sample1.txt  sample2.txt
