[package]
name = "datasense-cli"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
mime_guess = "2.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
